style.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
.container{
    width: 100%;
    margin: auto;
    margin-top: 1vw;
    background-color: rgba(128, 128, 128,0.2);
}
html{
    height: 100vh;
    position: relative;
}
.add_new {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    /* border-left:  2px solid black; */
    margin: 1vw;
    border-radius: 1vw;
    padding: 1vw;
    margin-bottom: 3vw;
    /* border-radius: 1vw; */
}
.save{
    text-align: center;
    width: 100px;
    height: 40px;
    background-color: black;
    color: wheat;
    outline: none;
}
.add_new select, .add_new input{
    display: block;
    margin-bottom: 1vw;
    width: 40vw;
    height: 50px;
    padding: 1vw;
}
/* .add_new input{
    width: 500px;
} */
.big_section{
    /* border-left: 2px solid black; */
    /* margin-left: 1vw; */
    /* position: absolute; */
    /* left: 35%; */
    /* display: flex; */
    /* flex-direction: row; */
    /* justify-content: space-between; */
    /* border-radius: 1vw;   */
    text-align: center;
}
.list{
    text-align: center;
    /* width: ; */
}
.project_list{
    /* text-align: center; */
    /* margin-bottom: 4vw; */
    /* display: flex;
    flex-direction: row; */
    /* align-items: center;        */
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 5px 0 rgba(0, 0, 0, 0.19);
    padding: 1vw;
    /* width: fit-content; */
    position: relative;
    margin:0;
}

.select_project{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.select_action{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.list input, .list select{
    width: 200px;
    height: 30px;
    /* margin: 0 3vw; */
}
.action_list{
    color: black;
    line-height: 30px;
    left: 100%;
    list-style-position: inside;
    width: min-content  ;
    margin: 1vw 0;
    height: max-content;
    text-align: left;
    width: 100%;
    padding: 2vw;
    box-sizing: border-box;
}
.reset{
    background-color: black;
    color: red;
    font-weight: bolder;
    /* margin:1vw 0; */
    width:100px;
    height: 40px;
    position: absolute;
    bottom: 1vw;
    right: 1vw;
}
footer{
    position: absolute;
    bottom: 1vw;
    left: 1vw;
}
@media(max-width:792px){
    .list, .action_list,.add_new{
        border: none;
    }
}
@media(max-width:800px){
    .add_new input , .add_new select{
        width: 90vw;
        height: 30px;
        /* border-radius: 1vw; */
    }
    .container{
        margin: 1vw;
        width: 100%;
        overflow: visible;
        /* margin-left: 10px; */
    }
    /* select, input, button{
        margin: 2vw;
        width: 100%;
    } */
    .select_project,.select_action{
        padding: 2vw;
        width: 100%;
    }
}

